# Soaring

./: .gitignore  .gitmodules
core/: CMakeLists.txt
core/duktape/: CMakeLists.txt
core/src/: core.cpp  core.h  host_api.cpp  host_api.h  js_engine.cpp  js_engine.h
core/tests/: CMakeLists.txt  test_main.cpp
